rhai/codegen/ui_tests/rhai_fn_rename_collision_oneattr_multiple.stderr
error: duplicate Rhai signature for 'bar'
  --> ui_tests/rhai_fn_rename_collision_oneattr_multiple.rs:17:15
   |
17 |     #[rhai_fn(get = "bar")]
   |               ^^^

error: duplicated function renamed 'bar'
  --> ui_tests/rhai_fn_rename_collision_oneattr_multiple.rs:12:15
   |
12 |     #[rhai_fn(name = "foo", get = "bar")]
   |               ^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> ui_tests/rhai_fn_rename_collision_oneattr_multiple.rs:25:8
   |
25 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
